# AI-Document-Orchestrator

./: .env  .gitignore  API_SETUP.md  QUICK_START.md  README.md  README_UI.md  WARP.md  app.py  example.py  pyproject.toml  requirements.txt  run_ui.bat  run_ui.sh
.devcontainer/: devcontainer.json
src/ai_doc_orchestrator/: __init__.py  __main__.py  base_agent.py  main.py  models.py
src/ai_doc_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_doc_orchestrator/agents/: __init__.py  formatting.py  qc.py  research.py  summary.py  writer.py
src/ai_doc_orchestrator/orchestrator/: __init__.py  orchestrator.py
src/ai_doc_orchestrator/tools/: __init__.py  google_docs.py  mcp_filesystem.py  pdf_generator.py  search.py
